[project]
name = "webloom"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "M Laraib Ali", email = "laraibg786@outlook.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "scipy>=1.13.1",
]

[project.scripts]
webloom = "webloom:main"

[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 80
indent-width = 4
preview = true
output-format = "grouped"

select = [
    "ANN", # flake8-annotations (required strict type annotations for public functions)
    "S",   # flake8-bandit (checks basic security issues in code)
    "BLE", # flake8-blind-except (checks the except blocks that do not specify exception)
    "FBT", # flake8-boolean-trap (ensure that boolean args can be used with kw only)
    "E",   # pycodestyle errors (PEP 8 style guide violations)
    "W",   # pycodestyle warnings (e.g., extra spaces, indentation issues)
    "DOC", # pydoclint issues (e.g., extra or missing return, yield, warnings)
    "A",   # flake8-buitins (check variable and function names to not shadow builtins)
    "N",   # Naming convention checks (e.g., PEP 8 variable and function names)
    "F",   # Pyflakes errors (e.g., unused imports, undefined variables)
    "I",   # isort (Ensures imports are sorted properly)
    "B",   # flake8-bugbear (Detects likely bugs and bad practices)
    "TID", # flake8-tidy-imports (Checks for banned or misplaced imports)
    "UP",  # pyupgrade (Automatically updates old Python syntax)
    "YTT", # flake8-2020 (Detects outdated Python 2/3 compatibility issues)
    "FLY", # flynt (Converts old-style string formatting to f-strings)
    "PIE", # flake8-pie
    "PL",  # pylint
    "RUF", # Ruff-specific rules (Additional optimizations and best practices)
]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[dependency-groups]
dev = [
  {include-group = "docs"},
  {include-group = "lint"},
  {include-group = "test"}
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
]
lint = [
    "ruff>=0.15.0",
]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]
